# azureml-examples

./: .devcontainer.json  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  ISSUES.md  README.md  SECURITY.md  Untitled.ipynb  amlarc-test-result.txt  attach_compute.py  azure-pipelines.yml  azureml_mlflow-0.1.0.0-py3-none-any.whl  cleanup.py  deploy-arm-templates-az-cli.sh  deploy-arm-templates-rest.sh  deploy-custom-container-vllm-huggingface-llama3.sh  deploy-custom-container-vllm-huggingface-phi3.sh  dev-requirements.txt  devcontainer.json  fix_notebook.py  get_job_logs.py  nbclear.py  prefix.md  publish_config.json  readme.md  readme.py  requirements-doc.txt  requirements.txt  setup-workspace.py  setup.ipynb  setup.py  setup.sh  suffix.md  test.ipynb  test.md  test.py  vllm-llama3-deployment.yml  (+4 more)
.devcontainer/: .start.sh  Dockerfile  devcontainer.json  jupyter_notebook_config.py  jupyter_server_config.py  no_op.txt  start.sh  wrapper.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  amlarc-tool.sh  amlarc_case_generator.py  amlarc_convert.py  copilot-instructions.md  labels.yaml
arm-templates/: code-version.json  environment-version.json  model-version.json  online-endpoint-deployment.json  online-endpoint.json
cli/: CONTRIBUTING.md  README.md  amlarc-compute.sh  batch-score-rest.sh  batch-score.sh  cleanup.sh  create-compute-extras.sh  create-compute.sh  (+122 more)
sdk/python/endpoints/online/llm/src/langchain/: README.md  pyproject.toml  startup.sh
sdk/python/endpoints/online/llm/src/langchain/app/: server.py
(+8986 files in other folders)
